[package]
name = "rust_scraper"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.27", features = ["derive"] }
csv = "1.3.1"
headless_chrome = "1.0.15"
polars = { version = "0.46.0", features = ["lazy"] }
polars-io = "0.46.0"
regex = "1.11.1"
reqwest = { version = "0.12.12", features = ["blocking"] }
thirtyfour = "0.35.0"
tokio = { version = "1.43.0", features = ["full"] }
